# rust-s3-practice

./: Cargo.toml
src/: configuration.rs  lib.rs  main.rs  server.rs
src/s3_ops/: ops.rs
src/transcribe_ops/: ops.rs
