[package]
name = "aws-s3-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
axum = "0.7.5"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.82"
