[package]
name = "aws-s3-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
aws-sdk-transcribe = "1.20.0"
axum = "0.7.5"
chrono = "0.4.38"
config = { version = "0.14.0", default-features = false, features = ["yaml"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.82"
